fix: align shadowed section and separate intermediate images from right

--- a/src/Components/Automation/Automation.css
+++ b/src/Components/Automation/Automation.css
@@ -174,6 +174,7 @@
     display: flex;
     flex-direction: column;
     margin: 0;
+    margin-right: 20px;
   }
 
   .automation-fith-image {
@@ -217,6 +218,7 @@
 
   .shadowed-section {
     padding: 0;
+    align-items: flex-start;
   }
 
   .second-info .intermediate-image {
@@ -226,6 +228,10 @@
   .pill-position {
     top: -40px;
     left: 470px;
+  }
+
+  .last-image{
+    margin-left: 100px;
   }
 }
 
